--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.compilerVersion>1.7</maven.compiler.compilerVersion>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencyManagement>
@@ -28,7 +29,7 @@
             <dependency>
                 <groupId>org.jboss.shrinkwrap.resolver</groupId>
                 <artifactId>shrinkwrap-resolver-bom</artifactId>
-                <version>2.2.0</version>
+                <version>2.2.1</version>
                 <scope>test</scope>
                 <type>pom</type>
             </dependency>
@@ -82,7 +83,7 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-cdi</artifactId>
-            <version>2.16.0</version>
+            <version>2.16.1</version>
         </dependency>
 
         <!-- test dependencies -->
@@ -137,11 +138,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
-                <configuration>
-                    <compilerVersion>${maven.compiler.compilerVersion}</compilerVersion>
-                    <source>${maven.compiler.compilerVersion}</source>
-                    <target>${maven.compiler.compilerVersion}</target>
-                </configuration>
             </plugin>
 
             <plugin>
@@ -219,7 +215,6 @@
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <version>2.19</version>
                         <configuration>
-                            <argLine>-XX:MaxPermSize=128M</argLine>
 		                    <systemPropertyVariables>
 		                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
 		                    </systemPropertyVariables>
