--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,24 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>eclipselink</artifactId>
+            <version>2.6.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+            <version>10.12.1.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-client</artifactId>
             <version>3.0.13.Final</version>
@@ -193,6 +211,7 @@
                         <configuration>
 		                    <systemPropertyVariables>
 		                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+                                <derby.stream.error.file>target/derby.log</derby.stream.error.file>
 		                    </systemPropertyVariables>
                         </configuration>
                         <executions>
